--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="logo" class="img-fluid">
+            <img src="./images/logo.png" alt="logo" class="img-fluid">
         </div>
 
         <!-- Navigation Menu -->
@@ -183,27 +183,27 @@
             <div class="tools-cards d-flex justify-content-center flex-wrap gap-5">
                 <!-- Tool Cards -->
                 <div class="tools-card">
-                    <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
+                    <img src="./images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #000;">CI/CD</h4>
                     <p style="color: #000;">Seamless integration for continuous integration and delivery.</p>
                 </div>
                 <div class="tools-card">
-                    <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
+                    <img src="./images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #000;">Docker</h4>
                     <p style="color: #000;">Streamline application deployment with containerization.</p>
                 </div>
                 <div class="tools-card">
-                    <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
+                    <img src="./images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #000;">Kubernetes</h4>
                     <p style="color: #000;">Effortless orchestration for complex cloud environments.</p>
                 </div>
                 <div class="tools-card">
-                    <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
+                    <img src="./images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #000;">Prometheus</h4>
                     <p style="color: #000;">Advanced monitoring and alerting for cloud infrastructure.</p>
                 </div>
                 <div class="tools-card">
-                    <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
+                    <img src="./images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
                     <h4 style="color: #000;">Grafana</h4>
                     <p style="color: #000;">Visualize and analyze your cloud infrastructure metrics.</p>
                 </div>
@@ -213,7 +213,7 @@
         <!-- About Section -->
         <section class="about-section mt-5 text-center">
             <h2 style="color: #000;">About KubEdge</h2>
-            <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
+            <img src="./images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
             <p style="color: #000;"><strong>Devesh Singh Rathore</strong> is the creator of KubEdge, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
             <a href="/documents/documentation.html" class="btn btn-dark btn-lg mt-3">View Documents</a>
         </section>
@@ -224,7 +224,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="images/logo.png" alt="KubEdge Documentation" class="card-img-top logo-size">
+                        <img src="./images/logo.png" alt="KubEdge Documentation" class="card-img-top logo-size">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #000;">KubEdge Deployment</h5>
                             <p class="card-text" style="color: #555;">Deploy and manage your applications easily with KubEdge.</p>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="images/docker.png" alt="Docker Basics" class="card-img-top logo-size">
+                        <img src="./images/docker.png" alt="Docker Basics" class="card-img-top logo-size">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #000;">Docker and Kubernetes Basics</h5>
                             <p class="card-text" style="color: #555;">Get started with the fundamentals of containerization and orchestration.</p>
@@ -269,31 +269,90 @@
                 </div>
             </div>
         </section>
-        
+
+        <!-- Support Section -->
+        <section class="support-section mt-5 text-center">
+            <h2 style="color: #000;">Customer Support</h2>
+            <p style="color: #555;">Our support team is available 24/7 to assist you with any issues or questions you may have regarding the KubEdge platform. Feel free to reach out to us for assistance.</p>
+            <a href="mailto:support@kubedge.com" class="btn btn-dark">Contact Support</a>
+        </section>
+
+        <!-- Case Studies Section -->
+        <section class="case-studies-section mt-5">
+            <h2 class="text-center" style="color: #000;">Case Studies</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="case-study-card text-center">
+                        <h4 style="color: #000;">Company A</h4>
+                        <p style="color: #555;">Learn how Company A leveraged KubEdge to scale its infrastructure and improve operational efficiency.</p>
+                        <a href="#case-study-1" class="btn btn-dark">Read Case Study</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="case-study-card text-center">
+                        <h4 style="color: #000;">Company B</h4>
+                        <p style="color: #555;">Discover how Company B optimized its cloud deployment with Kubernetes and Docker using KubEdge.</p>
+                        <a href="#case-study-2" class="btn btn-dark">Read Case Study</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Blog Section -->
+        <section class="blog-section mt-5">
+            <h2 class="text-center" style="color: #000;">Latest Blog Posts</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <img src="./images/blog-1.jpg" alt="Blog 1" class="img-fluid">
+                        <h5 style="color: #000;">Understanding Kubernetes for Beginners</h5>
+                        <p style="color: #555;">A detailed guide to understanding the basics of Kubernetes and how to use it effectively in your cloud infrastructure.</p>
+                        <a href="#blog-post-1" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <img src="./images/blog-2.jpg" alt="Blog 2" class="img-fluid">
+                        <h5 style="color: #000;">Docker vs Kubernetes: Which is Right for You?</h5>
+                        <p style="color: #555;">A comparison of Docker and Kubernetes, exploring the advantages and use cases of each.</p>
+                        <a href="#blog-post-2" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <img src="./images/blog-3.jpg" alt="Blog 3" class="img-fluid">
+                        <h5 style="color: #000;">Scaling Applications with Kubernetes</h5>
+                        <p style="color: #555;">Learn how to scale applications effectively using Kubernetes in a cloud-native environment.</p>
+                        <a href="#blog-post-3" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer>
-        <div class="container-fluid">
-            <h3>KubEdge</h3>
-            <p>"Unlock Hosting at the Edge" | Founder & Creator: Devesh Singh Rathore</p>
-
-            <div class="footer-links">
-                <a href="#">About</a> |
-                <a href="#">Careers</a> |
-                <a href="#">Contact Us</a> |
-                <a href="#">Cookies, Terms, & Privacy</a> |
-                <a href="#">Help</a>
-            </div>
-
-            <div class="contact-info">
-                <p>Email: <a href="mailto:deveshrathore13@gmail.com">deveshrathore13@gmail.com</a></p>
-                <p>GitHub: <a href="https://github.com/deveshrathore123/kubelife_server.git" target="_blank">kubelife_server</a></p>
-            </div>
-
-            <p>&copy; 2024 KubEdge. All rights reserved.</p>
+        <div class="footer-links">
+            <p><a href="#about">About</a> | <a href="#contact">Contact</a> | <a href="#privacy-policy">Privacy Policy</a></p>
         </div>
+        <div class="contact-info">
+            <p>Email us at: <a href="mailto:support@kubedge.com">support@kubedge.com</a></p>
+            <p>Follow us on social media: 
+                <a href="https://twitter.com/kubedge" target="_blank"><i class="fab fa-twitter"></i></a> 
+                <a href="https://facebook.com/kubedge" target="_blank"><i class="fab fa-facebook"></i></a>
+            </p>
+        </div>
+        <p>&copy; 2024 KubEdge. All Rights Reserved.</p>
     </footer>
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 </body>
 
 </html>
