--- a/index.html
+++ b/index.html
@@ -405,3 +405,116 @@
     </div>
 </section>
 
+
+
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KubEdge</title>
+  <style>
+    /* Styling remains the same */
+    body {
+      line-height: 1;
+      background-color: #242426;
+      color: #fff;
+     font-family: 'Gloock', serif;
+      min-height: 100vh;
+      overflow-x: hidden;
+      background-attachment: scroll;
+      background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20512%20512%22%20width%3D%22512%22%20height%3D%22512%22%20preserveAspectRatio%3D%22none%22%3E%20%3Cstyle%20type%3D%22text%2Fcss%22%3E%20path%20%7B%20fill%3A%20none%3B%20stroke%3A%20rgba(255,255,255,0.027)%3B%20stroke-width%3A%202.01px%3B%20stroke-linecap%3A%20round%3B%20stroke-linejoin%3A%20round%3B%20%7D%20%3C%2Fstyle%3E%20%3Cpath%20vector-effect%3D%22non-scaling-stroke%22%20d%3D%22M424%2C331.8c0%2C12.5-6.7%2C24.1-17.5%2C30.3l-132%2C76.2c-10.8%2C6.3-24.2%2C6.3-35%2C0l-132-76.2%20C96.7%2C355.8%2C90%2C344.3%2C90%2C331.8V179.2c0-12.5%2C6.7-24.1%2C17.5-30.3l132-76.2c10.8-6.3%2C24.2-6.3%2C35%2C0l132%2C76.2%20c10.8%2C6.3%2C17.5%2C17.8%2C17.5%2C30.3V331.8z%20M238.5%2C73l-256%2C147.6%20M273.5%2C439l252.1-145.4%20M256%2C634.7V378.3c0-12.5%2C6.7-24.1-17.5%2C30.3%20l252.1-145.4%20M256-122.7v256.4c0%2C12.5-6.7%2C24.1-17.5%2C30.3%20l-256%2C147.6%22%2F%3E%3C%2Fsvg%3E'), linear-gradient(16deg, #242426 0%, #212124 60%);
+      background-size: 318px, auto;
+      background-position: center, 0% 0%;
+      background-repeat: repeat, repeat;
+    }
+
+    footer {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      margin: 100px 0 !important;
+      padding: 30px;
+      font-family: 'Gloock', serif;
+    }
+
+    footer h3 {
+      color: #fff;
+      font-size: 30px;
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+
+    footer p {
+      font-size: 14px;
+      color: #ccc;
+      margin-bottom: 20px;
+    }
+
+    footer .footer-links {
+      margin: 20px 0;
+    }
+
+    footer .footer-links a {
+      margin: 0 20px;
+      color: #fff;
+      font-size: 16px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    footer .footer-links a:hover {
+      color: #f39c12;
+    }
+
+    footer .contact-info {
+      margin: 10px 0;
+      font-size: 14px;
+    }
+
+    footer .contact-info a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer .contact-info a:hover {
+      color: #f39c12;
+    }
+
+  </style>
+</head>
+<body>
+  <!-- Your main content here -->
+
+  <footer>
+    <h3>KubEdge</h3>
+    <p>"Unlock Hosting at the Edge" | Founder & Creator: Devesh Singh Rathore</p>
+
+    <div class="footer-links">
+      <a href="#">About</a> |
+      <a href="#">Careers</a> |
+      <a href="#">Contact Us</a> |
+      <a href="#">Cookies, Terms, & Privacy</a> |
+      <a href="#">Help</a>
+    </div>
+
+    <div class="contact-info">
+      <p>Email: <a href="mailto:deveshrathore13@gmail.com">deveshrathore13@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/deveshrathore123/kubelife_server.git" target="_blank">kubelife_server</a></p>
+    </div>
+
+    <p>&copy; 2024 KubEdge. All rights reserved.</p>
+  </footer>
+</body>
+</html>
+
+
+
+
+
+
+
