--- a/index.html
+++ b/index.html
@@ -272,25 +272,25 @@
 
         <!-- Support Section -->
         <section class="support-section mt-5 text-center">
-            <h2 style="color: #000;">Customer Support</h2>
+            <h2 style="color: #fff;">Customer Support</h2>
             <p style="color: #555;">Our support team is available 24/7 to assist you with any issues or questions you may have regarding the KubEdge platform. Feel free to reach out to us for assistance.</p>
             <a href="mailto:support@kubedge.com" class="btn btn-dark">Contact Support</a>
         </section>
 
         <!-- Case Studies Section -->
         <section class="case-studies-section mt-5">
-            <h2 class="text-center" style="color: #000;">Case Studies</h2>
+            <h2 class="text-center" style="color: #fff;">Case Studies</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="case-study-card text-center">
-                        <h4 style="color: #000;">Company A</h4>
+                        <h4 style="color: #fff;">Company A</h4>
                         <p style="color: #555;">Learn how Company A leveraged KubEdge to scale its infrastructure and improve operational efficiency.</p>
                         <a href="#case-study-1" class="btn btn-dark">Read Case Study</a>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="case-study-card text-center">
-                        <h4 style="color: #000;">Company B</h4>
+                        <h4 style="color: #fff;">Company B</h4>
                         <p style="color: #555;">Discover how Company B optimized its cloud deployment with Kubernetes and Docker using KubEdge.</p>
                         <a href="#case-study-2" class="btn btn-dark">Read Case Study</a>
                     </div>
@@ -300,12 +300,12 @@
 
         <!-- Blog Section -->
         <section class="blog-section mt-5">
-            <h2 class="text-center" style="color: #000;">Latest Blog Posts</h2>
+            <h2 class="text-center" style="color: #fff;">Latest Blog Posts</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="blog-card">
                         <img src="./images/blog-1.jpg" alt="Blog 1" class="img-fluid">
-                        <h5 style="color: #000;">Understanding Kubernetes for Beginners</h5>
+                        <h5 style="color: #fff;">Understanding Kubernetes for Beginners</h5>
                         <p style="color: #555;">A detailed guide to understanding the basics of Kubernetes and how to use it effectively in your cloud infrastructure.</p>
                         <a href="#blog-post-1" class="btn btn-dark">Read More</a>
                     </div>
@@ -313,7 +313,7 @@
                 <div class="col-md-4">
                     <div class="blog-card">
                         <img src="./images/blog-2.jpg" alt="Blog 2" class="img-fluid">
-                        <h5 style="color: #000;">Docker vs Kubernetes: Which is Right for You?</h5>
+                        <h5 style="color: #fff;">Docker vs Kubernetes: Which is Right for You?</h5>
                         <p style="color: #555;">A comparison of Docker and Kubernetes, exploring the advantages and use cases of each.</p>
                         <a href="#blog-post-2" class="btn btn-dark">Read More</a>
                     </div>
@@ -321,7 +321,7 @@
                 <div class="col-md-4">
                     <div class="blog-card">
                         <img src="./images/blog-3.jpg" alt="Blog 3" class="img-fluid">
-                        <h5 style="color: #000;">Scaling Applications with Kubernetes</h5>
+                        <h5 style="color: #fff;">Scaling Applications with Kubernetes</h5>
                         <p style="color: #555;">Learn how to scale applications effectively using Kubernetes in a cloud-native environment.</p>
                         <a href="#blog-post-3" class="btn btn-dark">Read More</a>
                     </div>
