--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color: #c9c9c9;"> <!-- Background color updated here -->
+<body style="background-color: #363636;"> <!-- Background color updated here -->
 
     <!-- Header -->
     <html lang="en">
